--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@paper-design/shaders-react": "^0.0.64",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/postprocessing": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "15.5.6",
+    "postprocessing": "^6.38.0",
     "react": "19.1.0",
+    "react-bits": "^1.0.5",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.181.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
