--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "postprocessing": "^6.38.0",
     "react": "19.1.0",
     "react-bits": "^1.0.5",
@@ -32,7 +32,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "^15.5.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
